# Loli-Cat-

./: HHHH.txt  main.py  memo.txt  neko.txt  nekochan.txt  pyproject.toml  taiko.txt
data/: arashi.py  cmd.py  event.py  music.py  nsfw.py  slash.py  verify.json
