[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "RaimuBot^^"
version = "0.1.0"
[tool.poetry.dependencies]
PyNaCl = "^1.4.0"
async-timeout = "^3.0.1"
discord = "^1.0.1"
python = "^3.8"
youtube-dl = "^2020.7.28"
requests = "^2.28.0"
python-dotenv = "^0.20.0"
py-cord = "^2.0.0"
[tool.poetry.dev-dependencies]
